// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderLinkElement renders a UniversalLink when mode is set to view 1`] = `
<div
  className="test-class"
  id="test"
>
  <a
    aria-hidden="true"
    className="anchor"
    href="/#test"
    onClick={[Function]}
    tabIndex={-1}
  >
    <svg
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      height={null}
      viewBox=""
      width="2em"
      xmlns=""
    />
  </a>
  Test test
</div>
`;

exports[`renderLinkElement renders a link element with a className 1`] = `
<div
  className="test-class"
  id="test"
>
  Test test
</div>
`;

exports[`renderLinkElement renders a link element with children and default props 1`] = `
<div
  id="test"
>
  Test test
</div>
`;
